# clion_googletest_template

./: .gitignore  CMakeLists.txt  README.md  library.h  makefile
src/: CMakeLists.txt  count.c  library.c  library.h  makefile
tests/: CMakeLists.txt  main.cpp  makefile  sample1_unittest.cc  test.sh
